<resources>
    <string name="app_name">Budgeter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="strSpendingDescr">Random Food</string>
    <string name="strSpendingAmount">$25</string>
    <string name="strSpendingType">Food</string>
    <string name="strSpendingDate">12-Feb-2019</string>
    <string name="str_dialog_heading">Spending</string>

    <string name="spending_dialog_pos_bt_str">Sigh :(</string>
    <string name="spending_dialog_neg_bt_str">Nope!</string>
</resources>
